Fix Homepage overflow

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   }
   
   body {
+    overflow: hidden;
     background-color: #0e0c16;
     color: #ececec;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
